  updated example(Matlab) with some more troubleshooting statements.
o DOCUMENTATION: Added Matlab 7.4.0 (R2007a), 7.7.0.471 (R2008b), and
  7.10.0.499 (R2010a) to the list of confirmed version that are 
  compatible with R.matlab.  Thanks Ajay Tripathy at UC Berkeley and
  Marco Colombo at University of Edinburgh for reporting this.


Version: 1.3.1 [2010-04-20]
o DOCUMENTATION: Minor update to argument 'fixNames' of help(readMat).
  Thanks Stephen Eglen (University of Cambridge) for the suggestion.


Version: 1.3.0 [2010-02-03]
o GENERALIZATION: Now readMat() can read also nested miMATRIX structures.
  Issue reported by Jonathan Chard at Mango Solutions, UK.


Version: 1.2.6 [2009-10-16]
o MEMORY OPTIMIZATION: For very large compressed data objects, there
  would not be enough memory to allocate the internal buffer resulting
  in an error.  Before this buffer was initiated to be 10 times the size
  of the compressed data.  If that fails, now readMat() tries smaller
  and smaller initial buffers, before giving in up.  Also, it now starts
  with a buffer 3 (not 10) times the compressed size.
  Thanks to Michael Sumner for reporting this problem.


Version: 1.2.5 [2009-08-25]
o BUG FIX: The Matlab server script (MatlabServer.m) gave the error
  "Undefined function or method 'ServerSocket' for input arguments 
  of type 'double'.", when launching it via Matlab$startServer(). It
  seems like import java.net.* etc. does not work. A workaround is to
  specify the full path for all Java classes, e.g. java.net.ServerSocket.
  Thanks Nicolas Stadler for reporting this issue. 


Version: 1.2.4 [2008-10-29]
o If onWrite == NULL, then there is no longer an outer two-pass scan
  for figuring out the size of MAT structure.  However, instead each
  internal writeDataElement() has to do a two-pass scan in order to 
  figure out the number of bytes before writing each element.
o BUG FIX: Arrays with more than two dimension would be written