@@ -9,6 +9,10 @@ o DOCUMENTATION: Added Matlab 7.4.0 (R2007a), 7.7.0.471 (R2008b), and
   7.10.0.499 (R2010a) to the list of confirmed version that are 
   compatible with R.matlab.  Thanks Ajay Tripathy at UC Berkeley and
   Marco Colombo at University of Edinburgh for reporting this.
+o BUG FIX: Now MatlabServer.m saves variables using the function form,
+  i.e. save().  This solves the problem of having single quotation marks
+  in the pathname. Thanks Michael Q. Fan at NC State University for 
+  reporting this problem.
 
 
 Version: 1.3.1 [2010-04-20]
